pinchflat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinchflat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pinchflat
  template:
    metadata:
      labels:
        app: pinchflat
    spec:
      nodeSelector:
        kubernetes.io/hostname: basalt
      containers:
        - name: pinchflat
          image: ghcr.io/kieraneglin/pinchflat:latest
          ports:
            - containerPort: 8945
              protocol: TCP
          volumeMounts:
            - name: pinchflat-config
              mountPath: /config
            - name: pinchflat-downloads
              mountPath: /downloads
      volumes:
        - name: pinchflat-config
          persistentVolumeClaim:
            claimName: pinchflat-config
        - name: pinchflat-downloads
          persistentVolumeClaim:
            claimName: pinchflat-downloads
